# shihaisha

./: CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  README.md  flake.nix
module/: default.nix
shihaisha-cli/: Cargo.toml
shihaisha-cli/src/: commands.rs  main.rs
shihaisha-core/: Cargo.toml
shihaisha-core/src/: diff.rs  error.rs  graph.rs  lib.rs  merge.rs
shihaisha-core/src/traits/: config_translator.rs  health_checker.rs  init_backend.rs  mod.rs
shihaisha-core/src/types/: backend_overrides.rs  health_check.rs  logging.rs  mod.rs  resource_limits.rs  service_group.rs  service_spec.rs  service_status.rs  socket_spec.rs
shihaisha-engine/: Cargo.toml
shihaisha-engine/src/: health.rs  launchd.rs  lib.rs  native.rs  registry.rs  supervisord.rs  systemd.rs  util.rs
shihaisha-engine/src/translator/: launchd_translator.rs  mod.rs  supervisord_translator.rs  systemd_translator.rs
