[package]
name = "shihaisha-engine"
description = "Backend implementations for shihaisha service management"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
homepage = "https://github.com/pleme-io/shihaisha"
repository = "https://github.com/pleme-io/shihaisha"
publish = true

[lints]
workspace = true

[features]
default = ["native"]
systemd = []
launchd = []
native = []
supervisord = []

[dependencies]
shihaisha-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
plist = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
